tests/bonsai/error/mutability.expect
---CODE---
1
---STDERR---
[internal] Error: src/Parser/Parser.cpp:60
tests/bonsai/error/mutability.bonsai:9:14: [parse error] Argument a at position 0 of call to function mutate0 must be mutable.

    mutate0(a); // `a` is not mutable
             ^
